[project]
name = "hospital-capacity-airflow-retraining-pipeline"
version = "0.1.0"
description = "Apache Airflow DAG for scheduled ML retraining with evaluation and gated auto-promotion"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "joblib>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
